--- a/views/thank-you.ejs
+++ b/views/thank-you.ejs
@@ -4,10 +4,9 @@
 <head>
     <title>Vakyansh: A crowdsourcing initiative for Indic languages</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- google APIs -->
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- 3rd party libs -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -67,11 +66,11 @@
             </div>
             <div>
                 <span class="h6 text-primary" id="progress-percent">0</span><span class="text-primary">%</span>
-                <p>Come Back again to hit your goalpost</p>
+                <p class="small">Come Back again to </br>hit your goalpost</p>
             </div>
         </div>
         <div class="text-primary mt-5 text-center">Share it with your friends and family</div>
-        <div class="row justify-content-center mt-2 bg-white">
+        <div class="row justify-content-center mt-2 mb-6 bg-white">
             <div class="col-lg-3 col-sm-5 col-12 text-center">
                 <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A//vakyansh.in/">
                     <img src="/img/fb-icon.svg" width="8%" alt="Share on Facebook">
