--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,7 +4,7 @@
 <head>
     <title>Vakyansh: A crowdsourcing initiative for Indic languages</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- google APIs -->
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap" rel="stylesheet">
     <!-- 3rd party libs -->
@@ -19,17 +19,17 @@
     <%- include common/header.ejs %>
     <div class="container-fluid pr-1">
         <div class="row pt-lg-5">
-            <div class="col-12 col-sm-7 col-lg-6 ml-lg-auto p-5 text-dark mt-4">
+            <div class="col-12 col-md-7 col-lg-6 ml-lg-auto p-5 text-dark mt-4">
                 <h1 class="display-5 font-wt-900 site-blue lh-5">Vakyansh: A crowdsourcing initiative for Indic
                     languages
                 </h1>
-                <p class="h5 font-weight-light lh-7 site-blue text-justify mt-5">For the development of a speech
+                <p class="h5 font-weight-light-lg font-weight-normal-sm lh-7 site-blue text-justify mt-5">For the development of a speech
                     recognition product that focuses solely on Indian languages,
                     there is a need for an enormous repository of diversified Indian voices. Through
                     Vakyansh, we are reaching out to you to contribute your voices to create a diverse open source
                     repository of Indian voices to this end.<a class="ml-1" href="/about-us"> Know More</a></p>
                 <div class="row mt-4">
-                    <div class="col-8 col-lg-5">
+                    <div class="col-8 col-lg-6">
                         <a role="button" href="#speaker-details"
                             class="btn btn-outline-primary h6 w-100 rounded mt-4 p-3">
                             START RECORDING
@@ -37,24 +37,24 @@
                     </div>
                 </div>
                 <div class="row mt-4" id="speaker-data">
-                    <div class="col-6 col-lg-5 col-xl-4 text-left" id="loader1">
+                    <div class="col-5 col-lg-5 col-xl-4 text-left" id="loader1">
                         <div><span class="spinner"></span></div>
                     </div>
-                    <div class="col-6 col-lg-6 col-xl-4 text-left" id="loader2">
+                    <div class="col-7 col-lg-6 col-xl-6 text-left" id="loader2">
                         <div><span class="spinner"></span></div>
                     </div>
-                    <div class="col-6 col-lg-5 col-xl-4 text-left d-none" id="speakers-wrapper">
-                        <p class="mb-0 h3" id="speaker-value">0</p>
+                    <div class="col-5 col-lg-5 col-xl-4 text-left d-none" id="speakers-wrapper">
+                        <p class="h4" id="speaker-value">0</p>
                         <p class="mb-0">speakers contributed</p>
                     </div>
-                    <div class="col-6 col-lg-6 col-xl-4 text-left d-none" id="hours-wrapper">
-                        <p class="mb-0"><span class="h3" id="hour-value">0</span><sup class="h6">/10000</sup></p>
+                    <div class="col-7 col-lg-6 col-xl-6 text-left d-none" id="hours-wrapper">
+                        <div class="mb-0 d-flex align-items-center"><span class="h4" id="hour-value">0</span><span class="h6">&nbsp;&nbsp;/10000</span></div>
                         <p class="mb-0">hours recorded</p>
                     </div>
                 </div>
 
             </div>
-            <div class="col-12 col-sm-5 col-lg-5 text-right px-0 align-self-center">
+            <div class="col-12 col-md-5 col-lg-5 text-right px-0 align-self-center">
                 <img src="/img/home.svg" class="img img-fluid">
             </div>
         </div>
