--- a/views/record.ejs
+++ b/views/record.ejs
@@ -4,7 +4,7 @@
 <head>
     <title>Vakyansh: A crowdsourcing initiative for Indic languages</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- google APIs -->
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -29,13 +29,13 @@
                 </div>
             </div>
             <div class="row mt-5">
-                <div class="col-8 offset-2">
+                <div class="col-7 col-sm-8 offset-2">
                     <div class="progress mt-1">
                         <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
                             aria-valuenow="0" aria-valuemin="0" aria-valuemax="10" style="width: 0.5%"></div>
                     </div>
                 </div>
-                <div class="col-2">
+                <div class="col-3 col-sm-2">
                     <span class="" id="currentSentenceLbl"></span>
                     <span class="">/</span>
                     <span class="" id="totalSentencesLbl"></span>
@@ -46,13 +46,13 @@
                     Let's get started!
                 </div>
             </div>
-            <div class="row justify-content-center mt-5" id="startRecordRow">
-                <div class="col-lg-2 col-md-3 col-sm-4 col-6" id="startRecordCol">
+            <div class="row justify-content-center align-items-center mt-5" id="startRecordRow">
+                <div class="col-xl-2 col-md-3 col-sm-4 col-6">
                     <button type="button" class="btn btn-primary shadow h6 w-100 rounded mt-4 p-3" id="startRecord">
                         START RECORDING
                     </button>
                 </div>
-                <div class="col-lg-2 col-md-3 col-sm-4 col-6">
+                <div class="col-xl-2 col-md-3 col-sm-4 col-6">
                     <button type="button" tabindex="-1" id="skipBtn"
                         class="btn btn-outline-primary h6 w-100 rounded mt-4 p-3">
                         SKIP
@@ -107,7 +107,7 @@
                 </div>
             </div>
         </div>
-        <div id="time-progress" class="position-fixed text-center">
+        <div id="time-progress" class="position-fixed text-center bg-transparent rounded-lg">
             <div id="graphcontainer" class="mx-auto">
                 <div id="graphbackground"></div>
                 <div id="graphbar"></div>
@@ -186,6 +186,30 @@
             </div>
         </div>
     </div>
+
+    <div class="modal fade" id="landscapeModal" tabindex="-1" role="dialog" aria-labelledby="landscapeModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header text-danger">
+                <h5 class="modal-title h2" id="landscapeModalLabel">
+                    <span class="material-icons md-48 align-middle">
+                        error
+                    </span>
+                    Error !!!</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                This page can not be viewed in landscape mode. Please rotate your device and refresh the page to continue.
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 
     <script
