--- a/views/terms-and-conditions.ejs
+++ b/views/terms-and-conditions.ejs
@@ -4,7 +4,7 @@
 <head>
     <title>Vakyansh: A crowdsourcing initiative for Indic languages</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap" rel="stylesheet"
         type="text/css">
 
