--- a/views/record.ejs
+++ b/views/record.ejs
@@ -90,7 +90,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row justify-content-center mt-5">
+            <div class="row justify-content-center mt-5 mb-2">
                 <div class="col-lg-2 col-md-3 col-sm-4 col-6">
                     <button type="button" id="reRecord"
                         class="d-none btn btn-outline-primary h6 w-100 rounded mt-4 p-3">
@@ -186,30 +186,6 @@
             </div>
         </div>
     </div>
-
-    <div class="modal fade" id="landscapeModal" tabindex="-1" role="dialog" aria-labelledby="landscapeModalLabel"
-    aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header text-danger">
-                <h5 class="modal-title h2" id="landscapeModalLabel">
-                    <span class="material-icons md-48 align-middle">
-                        error
-                    </span>
-                    Error !!!</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                This page can not be viewed in landscape mode. Please rotate your device and refresh the page to continue.
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            </div>
-        </div>
-    </div>
-</div>
 
 
     <script
