--- a/views/thank-you.ejs
+++ b/views/thank-you.ejs
@@ -19,29 +19,33 @@
 <body>
 
     <%- include common/header.ejs %>
-    <div class="container-fluid my-5 p-5 bg-thank-you h-100">
+    <div class="container-fluid my-5 py-5 px-3 px-md-5 bg-thank-you h-100">
         <div class="text-center">
             <h1 class="display-5 font-wt-900 site-blue">Thank you for contributing!</h1>
         </div>
-        <div class="row justify-content-center">
-            <div class="col-2 my-auto text-muted text-right pr-0">
-                <p id="hour-value" class="mb-0">5000</p>
-                <p>/10000 hours</p>
+        <div class="row mt-5">
+            <div class="col-12 col-sm-3 text-muted text-center text-sm-right align-self-sm-center align-self-end">
+                <b><p id="hour-value" class="mb-0">0</p></b>
+                <b><p class="mb-0">/10000 hours</p></b>
             </div>
-            <div class="col-5 text-left">
-                <img src="/img/thanks.svg" class="img img-fluid w-100">
+            <div class="col-12 col-sm-6 text-left align-self-sm-center align-self-start">
+                <img src="/img/thanks.svg" class="img img-fluid w-100" alt="Total Sentence Progress">
+                <div class="bg-primary position-absolute rounded-pill" id="total-progress"></div>
+                <div class="bg-primary position-absolute rounded-pill d-none" id="total-progress-bulb"></div>
             </div>
-
         </div>
-        <div class="row justify-content-center">
-            <p class="ml-3 lead">
-                Your contribution has got us <b><span id="user-contribution" class="">0 seconds</span></b>
-                closer to our goal!!!
-            </p>
+        <div class="row justify-content-center mt-5">
+           
+            <div class="col-xl-6 col-lg-8 col-11 text-center">
+                <p class="lead">
+                    Your contribution has got us <b><span id="user-contribution">0 seconds</span></b>
+                    closer to our goal!!!
+                </p>
+            </div>
         </div>
 
         <div class="row justify-content-center mt-5">
-            <div class="col-xl-6 col-lg-8 col-10 text-center lead">
+            <div class="col-xl-6 col-lg-8 col-11 text-center lead">
                 <p>
                     Vakyansh has been envisioned to meet a goal of approx. 10,000 hours of diversified Indian voices.
                 </p>
@@ -57,22 +61,10 @@
             <div class="col-lg-3 col-md-6 col-8 text-center lead">
                 <a href="/record" class="btn btn-primary btn-lg h6 w-100">Contribute More</a>
             </div>
-        </div>
-        <div id="progress-percent-wrapper" class="position-fixed text-center">
-            <div id="graphcontainer" class="mx-auto">
-                <div id="graphbackground"></div>
-                <div id="graphbar"></div>
-                <div id="graphforeground">
-                </div>
-            </div>
-            <div>
-                <span class="h6 text-primary" id="progress-percent">0</span><span class="text-primary">%</span>
-                <p class="small">Come Back again to </br>hit your goalpost</p>
-            </div>
-        </div>
+        </div> 
         <div class="text-primary mt-5 text-center">Share it with your friends and family</div>
-        <div class="row justify-content-center mt-2 mb-6 bg-white">
-            <div class="col-lg-3 col-sm-5 col-12 text-center">
+        <div class="row justify-content-center mt-2 mb-6">
+            <div class="col-lg-3 col-sm-5 col-12 text-center bg-white">
                 <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A//vakyansh.in/">
                     <img src="/img/fb-icon.svg" width="8%" alt="Share on Facebook">
                 </a>
@@ -84,6 +76,19 @@
                 <a href="https://twitter.com/intent/tweet?text=I%20contributed%20my%20voice%20on%20https%3A//vakyansh.in/%0APlease%20contribute%20your%20voice%20and%20help%20in%20this%20initiative" >
                     <img src="/img/twitter-icon.svg" width="8%" alt="Share on Twitter">
                 </a>
+            </div>
+        </div>
+
+        <div id="progress-percent-wrapper" class="position-fixed text-center">
+            <div id="graphcontainer" class="mx-auto">
+                <div id="graphbackground"></div>
+                <div id="graphbar"></div>
+                <div id="graphforeground">
+                </div>
+            </div>
+            <div>
+                <span class="h6 text-primary" id="progress-percent">0</span><span class="text-primary">%</span>
+                <p class="small">Come Back again to </br>hit your goalpost</p>
             </div>
         </div>
     </div>
