Fixed t&c mobile page, removed extra image files

--- a/views/about-us.ejs
+++ b/views/about-us.ejs
@@ -114,7 +114,7 @@
                 </p>
                 <div class="row">
                     <div class="col-10 col-sm-8 col-lg-5">
-                        <a role="button" href="/record"
+                        <a role="button" href="/#speaker-details"
                             class="btn bg-white shadow text-primary h6 w-100 rounded mt-3 p-3">
                             START RECORDING
                         </a>
