--- a/views/terms-and-conditions.ejs
+++ b/views/terms-and-conditions.ejs
@@ -19,14 +19,18 @@
     <%- include common/header.ejs %>
     <div class="container-fluid">
         <div class="row pt-5 justify-content-center bg-primary">
-            <div class="col-lg-6 col-md-8 col-sm-10 p-5 text-light text-center mt-5">
+            <div class="col-12 col-sm-10 col-md-8 px-1 py-0 text-light text-center mt-0 mt-sm-2 mt-lg-3 mt-xl-4">
                 <h1 class="display-5 font-wt-900">Terms and Conditions</h1>
             </div>
         </div>
-        <div class="row justify-content-center bg-primary" id="nav-row">
-            <div class="col-md-8 col-sm-10 p-4-5 text-light text-center">
+        <div class="row justify-content-center align-items-center bg-primary" id="nav-row">
+            <div class="col-12 col-lg-4 col-xl-3  py-4 px-3 p-xl-5 text-light text-center text-lg-right">
                 <a href="#terms-of-use" class="text-white h6 p-3 badge-pill border mx-3">Terms of Use</a>
+            </div>
+            <div class="col-12 col-lg-4 col-xl-3  py-4 px-3 p-xl-5 text-light text-center">
                 <a href="#privacy-policy" class="text-white h6 p-3 badge-pill border mx-3">Privacy Policy</a>
+            </div>
+            <div class="col-12 col-lg-4 col-xl-4  py-4 px-3 p-xl-5 text-light text-center text-lg-left">
                 <a href="#copyright" class="text-white h6 p-3 badge-pill border mx-3">Copyright & Licensing Notice</a>
             </div>
         </div>
@@ -37,7 +41,7 @@
             <h1 class="display-5 font-wt-900">Terms of Use</h1>
         </div>
         <div class="row justify-content-center">
-            <div class="col-10 col-lg-6 text-left">
+            <div class="col-12 col-sm-8 col-lg-6 text-left">
                 <p>
                     This website <a href="/">vakyansh.in</a> (<b>"Website"</b>) is developed and maintained by EkStep
                     Foundation (<b>“EkStep”</b>). EkStep is a not-for-profit company registered under the Indian
@@ -64,7 +68,7 @@
         </div>
 
         <div class="row justify-content-center my-4">
-            <div class="col-10 col-lg-6 text-left">
+            <div class="col-12 col-sm-8 col-lg-6 text-left">
                 <b>1. Access and Use </b>
                 <div class="ml-1">a. Users can contribute Voice Recordings on the Website.</div>
                 <div class="ml-1">b. Anyone over the age of 18 can contribute to the Website. If you are below 18 years,
@@ -112,13 +116,13 @@
                 </div>
                 <div class="ml-1">EkStep reserves the right to make the Voice Recordings available on a public database.
                     Voice Recordings will be available under the <a
-                        href="https://creativecommons.org/publicdomain/zero/1.0/legalcode">CC0 1.0 Universal (CC0 1.0)
+                        href="https://creativecommons.org/publicdomain/zero/1.0/legalcode" target="_blank" rel="noopener noreferrer">CC0 1.0 Universal (CC0 1.0)
                         Public Domain Dedication</a>.
                     That means that they will be public and EkStep has waived all copyrights to the extent EkStep can
                     under law. If you participate by contributing your Voice Recordings, we require you to do the same.
                     If you choose to provide Voice Recording on the Website, you consent to EkStep offering your Voice
                     Recordings to the public under the <a
-                        href="https://creativecommons.org/publicdomain/zero/1.0/legalcode">CC0 1.0 Universal (CC0 1.0)
+                        href="https://creativecommons.org/publicdomain/zero/1.0/legalcode" target="_blank" rel="noopener noreferrer">CC0 1.0 Universal (CC0 1.0)
                         Public Domain Dedication</a>.</div>
                 <div class="ml-1">g. EkStep reserves the right to pre-screen or review Voice Recording and to refuse to
                     publish or delete any Voice Recordings which it deems does not fulfill the Purpose.
@@ -189,7 +193,7 @@
             <h1 class="display-5 font-wt-900">Privacy Policy</h1>
         </div>
         <div class="row justify-content-center">
-            <div class="col-10 col-lg-6 text-left">
+            <div class="col-12 col-sm-8 col-lg-6 text-left">
 
                 Effective Date: 1st June, 2020
                 </br></br>
@@ -229,7 +233,7 @@
                         the Purpose, including to develop speech-to-text technology and tools. Voice Recordings, along
                         with any optionally provided demographic metadata such as age group, gender and mother tongue,
                         may be aggregated and made available publically available for public consumption, for use under
-                        <a href="https://creativecommons.org/publicdomain/zero/1.0/legalcode">CC0 1.0 Universal (CC0
+                        <a href="https://creativecommons.org/publicdomain/zero/1.0/legalcode"  target="_blank" rel="noopener noreferrer">CC0 1.0 Universal (CC0
                             1.0)
                             Public Domain Dedication</a>. No personal metadata that can be used to
                         identify a User or their voices will be collected or disclosed along with the Voice Recordings.
@@ -351,24 +355,25 @@
         </div>
 
         <div class="row justify-content-center mb-5 pb-6">
-            <div class="col-10 col-lg-6 text-left">
-                Unless otherwise indicated, the Website is Copyright 2020 EkStep Foundation.
-                </br>
-                </br>
-                Voice recordings, along with any optionally provided demographic data, shall be available in the Website
-                database for public consumption and use under
-                <a href="https://creativecommons.org/publicdomain/zero/1.0/legalcode">CC0 1.0 Universal (CC0 1.0)
-                    Public Domain Dedication.</a>
+            <div class="col-12 col-sm-8 col-lg-6 text-left">
+                <p>
+                    Unless otherwise indicated, the Website is Copyright 2020 EkStep Foundation.
+                    </br>
+                    </br>
+                    Voice recordings, along with any optionally provided demographic data, shall be available in the
+                    Website
+                    database for public consumption and use under
+                    <a href="https://creativecommons.org/publicdomain/zero/1.0/legalcode"  target="_blank" rel="noopener noreferrer">CC0 1.0 Universal (CC0 1.0)
+                        Public Domain Dedication.</a>
 
-                </br></br>
-                Text prompts provided on the Website to create Voice Recordings are
-                selected from the following open source resource databases: -
-                <ul>
-                    <li>https://github.com/indicnlpweb/indicnlp_catalog</li>
-                    <li>https://github.com/facebookresearch/LASER/tree/master/tasks/WikiMatrix</li>
+                    </br></br>
+                    Text prompts provided on the Website to create Voice Recordings are
+                    selected from the following open source resource databases: -
+                </p>
+                <ul class="text-break">
+                    <li><a href="https://github.com/indicnlpweb/indicnlp_catalog"  target="_blank" rel="noopener noreferrer">https://github.com/indicnlpweb/indicnlp_catalog</a></li>
+                    <li><a href="https://github.com/facebookresearch/LASER/tree/master/tasks/WikiMatrix"  target="_blank" rel="noopener noreferrer">https://github.com/facebookresearch/LASER/tree/master/tasks/WikiMatrix</a></li>
                 </ul>
-
-
             </div>
 
         </div>
