--- a/views/thank-you.ejs
+++ b/views/thank-you.ejs
@@ -65,15 +65,15 @@
         <div class="text-primary mt-5 text-center">Share it with your friends and family</div>
         <div class="row justify-content-center mt-2 mb-6">
             <div class="col-lg-3 col-sm-5 col-12 text-center bg-white">
-                <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A//vakyansh.in/">
+                <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A//vakyansh.in/" target="_blank" rel="noopener noreferrer">
                     <img src="/img/fb-icon.svg" width="8%" alt="Share on Facebook">
                 </a>
                 <span>&sdot;</span>
-                <a href="https://www.linkedin.com/shareArticle?mini=true&url=https%3A//vakyansh.in/&title=Vakyansh%3A%20A%20crowdsourcing%20initiative%20for%20Indic%20languages&summary=&source=" >
+                <a href="https://www.linkedin.com/shareArticle?mini=true&url=https%3A//vakyansh.in/&title=What%20If%20we%20tell%20you%20that%20you%20can%20have%20a%20Speech%20recognition%20product,%20that%20will%20be%20as%20Indian,%20as%20you%20and%20I.%20It%20will%20also%20be%20free%20of%20cost%20for%20every%20Indian.%20Make%20it%20happen%20by%20donating%20your%20voice%20today.%20Visit%20https%3A//vakyansh.in/&summary=What%20If%20we%20tell%20you%20that%20you%20can%20have%20a%20Speech%20recognition%20product,%20that%20will%20be%20as%20Indian,%20as%20you%20and%20I.%20It%20will%20also%20be%20free%20of%20cost%20for%20every%20Indian.%0AMake%20it%20happen%20by%20donating%20your%20voice%20today.%20Visit%20https%3A//vakyansh.in/&source=" target="_blank" rel="noopener noreferrer">
                     <img src="/img/linkedin-icon.svg" width="8%" alt="Share on LinkedIn">
                 </a>
                 <span>&sdot;</span>
-                <a href="https://twitter.com/intent/tweet?text=I%20contributed%20my%20voice%20on%20https%3A//vakyansh.in/%0APlease%20contribute%20your%20voice%20and%20help%20in%20this%20initiative" >
+                <a href="https://twitter.com/intent/tweet?text=What%20If%20we%20tell%20you%20that%20you%20can%20have%20a%20Speech%20recognition%20product,%20that%20will%20be%20as%20Indian,%20as%20you%20and%20I.%20It%20will%20also%20be%20free%20of%20cost%20for%20every%20Indian.%0AMake%20it%20happen%20by%20donating%20your%20voice%20today.%20Visit%20https%3A//vakyansh.in/" target="_blank" rel="noopener noreferrer">
                     <img src="/img/twitter-icon.svg" width="8%" alt="Share on Twitter">
                 </a>
             </div>
