--- a/views/thank-you.ejs
+++ b/views/thank-you.ejs
@@ -31,7 +31,7 @@
             <div class="col-12 col-sm-6 text-left align-self-sm-center align-self-start">
                 <img src="/img/thanks.svg" class="img img-fluid w-100" alt="Total Sentence Progress">
                 <div class="bg-primary position-absolute rounded-pill" id="total-progress"></div>
-                <div class="bg-primary position-absolute rounded-pill d-none" id="total-progress-bulb"></div>
+                <div class="position-absolute rounded-pill" id="total-progress-bulb"></div>
             </div>
         </div>
         <div class="row justify-content-center mt-5">
